# ActixWebService

./: .env  Cargo.toml  readme.md
src/: main.rs
src/api/: health.rs  mod.rs  task.rs
src/model/: mod.rs
src/repository/: dynamodb_repository.rs  mod.rs  task_repository.rs
