[package]
name = "actix_web_task_service"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
actix-rt = "2.9"
log = "0.4"
env_logger = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.0", features = ["full"] }

# AWS SDK with Rustls to avoid OpenSSL issues
aws-sdk-dynamodb = { version = "1.0", default-features = false, features = ["rustls"] }
aws-config = { version = "1.0", default-features = false, features = ["rustls"] }